--- a/pixi.toml
+++ b/pixi.toml
@@ -24,3 +24,5 @@ seaborn = ">=0.13.2,<0.14"
 jupyter = ">=1.0.0,<2"
 rasterio = ">=1.3.10,<2"
 momepy = ">=0.8.0,<0.9"
+rioxarray = ">=0.17.0,<0.18"
+xvec = ">=0.3.0,<0.4"
