--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-data/
 notes/
 results/
 my_results/
@@ -10,3 +9,6 @@ tmp/*
 
 __pycache__/
 .ipynb_checkpoints/
+# pixi environments
+.pixi
+*.egg-info
