--- a/pixi.toml
+++ b/pixi.toml
@@ -1,29 +1,18 @@
 [project]
-authors = [
-    "Marek Novotny <marek.novotny@natur.cuni.cz>",
-    "Martin Fleischmann <martin@martinfleischmann.net>"
-    ]
+authors = ["Martin Fleischmann <martin@martinfleischmann.net>"]
 channels = ["conda-forge"]
-description = "Streetscape analysis based on Araldi and Fusco (2024?)"
+description = "Development of streetscape module for momepy."
 name = "streetscape"
-platforms =  ["linux-64", "osx-arm64", "osx-64", "win-64"]
+platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
 
 [dependencies]
-pandas = ">=2.2.2,<3"
-geopandas = ">=1.0.1,<2"
-matplotlib = ">=3.9.2,<4"
-rtree = ">=1.3.0,<2"
-shapely = ">=2.0.6,<3"
-numpy = ">=2.1.0,<3"
-toml = ">=0.10.2,<0.11"
-scikit-learn = ">=1.5.1,<2"
-seaborn = ">=0.13.2,<0.14"
-jupyter = ">=1.0.0,<2"
-rasterio = ">=1.3.10,<2"
-momepy = ">=0.8.0,<0.9"
+momepy = ">=0.9.1,<0.10"
 rioxarray = ">=0.17.0,<0.18"
 xvec = ">=0.3.0,<0.4"
-snakeviz = ">=2.2.0,<3"
+ipykernel = ">=6.29.5,<7"
+jupyterlab = ">=4.3.1,<5"
+pyarrow = ">=18.1.0,<19"
+matplotlib = ">=3.9.2,<4"
